# rust_os

./: Cargo.toml  LICENSE.txt  Readme.md
docs/: boot_loader.md  free_binary.md  install-and-commands.md  install.md  x86_64-rust_os.md
src/: lib.rs  main.rs  panic_handler.rs
src/gdt/: mod.rs
src/interrupts/: breakpoint.rs  double_fault.rs  hw_interrupts.rs  keyboard.rs  mod.rs  page_fault.rs  timer.rs
src/kernel_init/: mod.rs
src/macros/: mod.rs
src/qemu/: exit_code.rs  mod.rs
src/serial_port_com/: mod.rs
src/testing/: mod.rs  testable.rs
src/vga_buffer/: color.rs  mod.rs  screen_character.rs  writer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
