[package]
name = "rust_os"
version = "0.1.0"
authors = ["Nicolae Bacila <nicolae.bacila@infiniswiss.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33